Fixing the overflow of the nav

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -75,3 +75,10 @@ input[type="submit"][disabled]:hover {
   background-color: #ddd;
   background: #ddd;
 } */
+
+.signUpPage,
+.loginPage {
+  max-width: 1180px;
+  margin: auto;
+  overflow: hidden;
+}
