--- a/client/src/Components/Register/Register.css
+++ b/client/src/Components/Register/Register.css
@@ -17,7 +17,7 @@
 
 .signSection {
   display: flex;
-  margin: 2.42rem auto 2rem;
+  margin: 2rem auto;
   justify-content: center;
   align-items: center;
   width: 90%;
@@ -68,11 +68,12 @@
 }
 
 .loginImg {
-  width: 70%;
+  width: 75%;
+  align-self: center;
 }
 
 .forms {
-  margin: 3rem 0;
+  margin: 2rem 0;
   display: flex;
   align-content: center;
   justify-content: center;
